# fastapi_mongo

./: README.md  pyproject.toml
app/server/: app.py  database.py
app/server/models/: model.py
app/server/routes/: model.py
app/server/tests/: test_app.py
